[gd_scene load_steps=4 format=3 uid="uid://duk6af7q4nfu1"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPActions/parts/BulletpointItem/bulletpoint_item.gd" id="1_tflge"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="2_83yxk"]
[ext_resource type="PackedScene" uid="uid://cyhe3unultj57" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPActions/parts/BulletpointItem/BulletpointListItem/BulletpointListItem.tscn" id="3_8vnna"]

[node name="BulletpointItem" type="VBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_tflge")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="HeaderLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Placement"
label_settings = ExtResource("2_83yxk")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="PlacementList" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BulletpointListItem" parent="MarginContainer/PlacementList" instance=ExtResource("3_8vnna")]
layout_mode = 2
